Updates to match OOM onap-parameters.yaml changes
Change-Id: I76149fa3762221a8c1fc0cee6a44d83238ebdb89
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/huawei/onap-beijing-oom.env
+++ b/deployment/heat/onap-oom/env/huawei/onap-beijing-oom.env
@@ -19,15 +19,15 @@ parameters:
   public_net_id: 3a6247f1-fac6-4167-a49f-33cc8415ccf4
   public_net_name: provider
 
-  dcae_keystone_url: http://10.145.122.117:5000/v2.0
   oam_network_cidr: 172.16.0.0/16
-  dcae_ip_addr: 172.16.0.4
   dns_forwarder: 10.145.122.117
   external_dns: 10.145.122.118
 
-  dnsaas_proxy_enable: false
-  dnsaas_keystone_url: http://10.145.122.117:5000/v2.0
+  dnsaas_proxy_enable: "false"
+  dnsaas_proxied_keystone_url_path: "v2.0"
+  dnsaas_keystone_url: http://10.145.122.117:5000
   dnsaas_region: RegionOne
+  dnsaas_tenant_id: 3d228d2fcbb7447bbba3cde703431bc1
   dnsaas_tenant_name: onap-beijing-oom
   dnsaas_username: demo
   dnsaas_password: demo
