--- a/deployment/heat/onap-oom/env/windriver/Integration-Jenkins.env
+++ b/deployment/heat/onap-oom/env/windriver/Integration-Jenkins.env
@@ -19,15 +19,15 @@ parameters:
   public_net_id: 971040b2-7059-49dc-b220-4fab50cb2ad4
   public_net_name: external
 
-  dcae_keystone_url: "http://10.0.14.1/api/multicloud-titanium_cloud/v0/pod25_RegionOne/identity/v2.0"
   oam_network_cidr: 10.0.0.0/16
-  dcae_ip_addr: 10.0.4.1
   dns_forwarder: 10.12.25.5
   external_dns: 8.8.8.8
 
-  dnsaas_proxy_enable: true
-  dnsaas_keystone_url: http://10.12.25.5:5000/v2.0
+  dnsaas_proxy_enable: "true"
+  dnsaas_proxied_keystone_url_path: "api/multicloud-titanium_cloud/v0/pod25_RegionOne/identity/v2.0"
+  dnsaas_keystone_url: http://10.12.25.5:5000
   dnsaas_region: RegionOne
+  dnsaas_tenant_id: bf80d09fbc804b42b3bc727d6cf1fcbe
   dnsaas_tenant_name: Integration-Jenkins
   dnsaas_username: demo
   dnsaas_password: onapdemo
