--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -45,7 +45,7 @@ nodes = [
     :macs   => [],
     :cpus   => 2,
     :cpu    => "50",
-    :ram    => 6 * 1024,
+    :ram    => 8 * 1024,
     :groups => ["individual"],
     :args   => ["aai"],
     :fwds   => [
@@ -157,7 +157,7 @@ nodes = [
     :ram    => 64 * 1024,
     :groups => ["individual"],
     :args   => ["oom"],
-    :hd     => "60G",
+    :hd     => { :virtualbox => "61440", :libvirt => "60G", },
     :fwds   => [
       { :guest => 8880, :host => 8880, :guest_ip => '192.168.50.21' },
       { :guest => 8989, :host => 8989, :guest_ip => '192.168.50.21' },
@@ -202,7 +202,7 @@ nodes = [
     :ram    => 8 * 1024,
     :groups => ["individual"],
     :args   => ["sdc"],
-    :hd     => "20G",
+    :hd     => { :virtualbox => "20480", :libvirt => "20G", }
   },
   {
     :name   => "sdnc",
@@ -355,6 +355,7 @@ Vagrant.configure("2") do |config|
         system 'vagrant plugin install vagrant-proxyconf'
         raise 'vagrant-proxyconf was installed but it requires to execute again'
       end
+      config.proxy.enabled = { docker: false }
       config.proxy.http     = ENV['http_proxy']
       config.proxy.https    = ENV['https_proxy']
       configuration['socks_proxy'] = ENV['socks_proxy']
@@ -420,7 +421,7 @@ Vagrant.configure("2") do |config|
           if node.has_key? :hd
             volume_file = node[:name] + '-vol1-data.vdi'
             unless File.exist?(volume_file)
-              vbox.customize ['createhd', '--filename', volume_file, '--size', node[:hd]]
+              vbox.customize ['createmedium', 'disk', '--filename', volume_file, '--size', node[:hd][provider]]
             end
             vbox.customize ['storageattach', :id, '--storagectl', 'SATAController', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', volume_file]
           end
@@ -442,7 +443,7 @@ Vagrant.configure("2") do |config|
 
           # Set Storage
           if node.has_key? :hd
-            lbox.storage :file, bus: 'sata', device: 'sda', size: node[:hd]
+            lbox.storage :file, bus: 'sata', device: 'sda', size: node[:hd][provider]
           end
         end
         if node.has_key? :fwds
