--- a/deployment/heat/onap-oom/onap-oom.yaml
+++ b/deployment/heat/onap-oom/onap-oom.yaml
@@ -140,6 +140,18 @@ resources:
       router_id: { get_resource: router }
       subnet_id: { get_resource: oam_subnet }
 
+  rancher_private_port:
+    type: OS::Neutron::Port
+    properties:
+      network: { get_resource: oam_network }
+      fixed_ips: [{"subnet": { get_resource: oam_subnet }}]
+
+  rancher_floating_ip:
+    type: OS::Neutron::FloatingIP
+    properties:
+      floating_network_id: { get_param: public_net_id }
+      port_id: { get_resource: rancher_private_port }
+
   rancher_vm:
     type: OS::Nova::Server
     properties:
@@ -148,7 +160,7 @@ resources:
       flavor: { get_param: rancher_vm_flavor }
       key_name: onap_key
       networks:
-      - network: { get_param: public_net_id }
+      - port: { get_resource: rancher_private_port }
       user_data_format: RAW
       user_data:
         str_replace:
