Fix return of rancher IP address
Change-Id: I4aa4711ffe1cdd10b69271ca305b95a2f6f406dd
Issue-ID: INT-278
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/onap-oom.yaml
+++ b/deployment/heat/onap-oom/onap-oom.yaml
@@ -227,7 +227,7 @@ resources:
 outputs:
   rancher_vm_ip:
     description: The IP address of the rancher instance
-    value: { get_attr: [rancher_vm, first_address] }
+    value: { get_attr: [rancher_floating_ip, floating_ip_address] }
 
   k8s_vm_ip:
     description: The IP address of the k8s instance
