Update config for ATT TLAB
Change-Id: I0c81183c95ede3552c1085496ca9933622a20329
Issue-ID: INT-414
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
@@ -14,13 +14,13 @@ parameters:
   docker_proxy: nexus3.onap.org:10001
 
   rancher_vm_flavor: m1.small
-  k8s_vm_flavor: m1.xlarge
+  k8s_vm_flavor: m2.xxlarge
 
   public_net_id: fbe8fd92-6636-4e63-ab28-bb6a5b0888a9
   public_net_name: admin-vpn-floating
 
   oam_network_cidr: 10.0.0.0/16
-  dns_forwarder: 8.8.8.8
+  dns_forwarder: 204.178.3.230
   external_dns: 8.8.8.8
 
   dnsaas_proxy_enable: "false"
