Update config for ATT TLAB
Change-Id: I7dd28ab1427b1ca7741a30cbda426e4eb6a5a04c
Issue-ID: INT-414
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
@@ -1,6 +1,6 @@
 parameters:
 
-  keystone_url: https://bdc1tlab01.research.att.com:5000/v3
+  keystone_url: https://bdc1tlab01.research.att.com:5000
   openstack_tenant_id: b4062c7fbf9646b8a2bcb71c46695ff3
   openstack_tenant_name: ETE-OOM-Test
   openstack_username: ${OS_USERNAME}
@@ -24,8 +24,8 @@ parameters:
   external_dns: 8.8.8.8
 
   dnsaas_proxy_enable: "false"
-  dnsaas_proxied_keystone_url_path: "https://bdc1tlab01.research.att.com:5000/v3"
-  dnsaas_keystone_url: https://bdc1tlab01.research.att.com:5000/v3
+  dnsaas_proxied_keystone_url_path: "v3"
+  dnsaas_keystone_url: https://bdc1tlab01.research.att.com:5000
   dnsaas_region: RegionOne
   dnsaas_tenant_id: b4062c7fbf9646b8a2bcb71c46695ff3
   dnsaas_tenant_name: ETE-OOM-Test
