Use centos7 cloud image for DCAE
Change-Id: Idecde1fa63d40d7e6d3eb3a4d67d1791c90b13bb
Issue-ID: INT-414
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
@@ -8,7 +8,7 @@ parameters:
 
   ubuntu_1404_image: "Ubuntu 14.04 LTS Generic"
   ubuntu_1604_image: "Ubuntu 16.04 LTS Generic"
-  centos_7_image: "CentOS 7 Generic"
+  centos_7_image: "centos7"
 
   apt_proxy: ""
   docker_proxy: nexus3.onap.org:10001
