Forward port for SDC simulator
The SDC simulator thru the port 8285, this change allows to accces
it using localhost url.

Change-Id: I008635047443c11e298e4d15c4d2314b514f8e2f
Signed-off-by: Victor Morales <victor.morales@intel.com>
Issue-ID: SDC-993

--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -202,7 +202,10 @@ nodes = [
     :ram    => 8 * 1024,
     :groups => ["individual"],
     :args   => ["sdc"],
-    :hd     => { :virtualbox => "20480", :libvirt => "20G", }
+    :hd     => { :virtualbox => "20480", :libvirt => "20G", },
+    :fwds   => [
+      { :guest => 8285, :host => 8285, :guest_ip => '192.168.50.5' },
+    ]
   },
   {
     :name   => "sdnc",
