Add MUSIC clone and build for Vagrant
This patch adds MUSIC project cloning and building
in the Vagrant ONAP project.

Change-Id: Ife1bd4675e11ee66d7dfb1c864301c0f055825db
Issue-ID: INT-421
Signed-off-by: Shashank Kumar Shankar <shashank.kumar.shankar@intel.com>

--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -149,6 +149,16 @@ nodes = [
     ]
   },
   {
+      :name   => "music",
+      :ips    => ['10.252.0.22', "192.168.50.22"],
+      :macs   => [],
+      :cpus   => 2,
+      :cpu    => "50",
+      :ram    => 4 * 1024,
+      :groups => ["individual"],
+      :args   => ["music"],
+  },
+  {
     :name   => "oom",
     :ips    => ['10.252.0.21', "192.168.50.21"],
     :macs   => [],
