--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -26,7 +26,7 @@ configuration = {
   'debug'               => 'True',
   'build_image'         => 'True',
   'clone_repo'          => 'True',
-  'compile_repo'        => 'False',
+  'compile_repo'        => 'True',
   'enable_oparent'      => 'True',
   'skip_get_images'     => 'False',
   'skip_install'        => 'True'
@@ -147,6 +147,16 @@ nodes = [
     :fwds   => [
       { :guest => 9003, :host => 9003, :guest_ip => '192.168.50.16' },
     ]
+  },
+  {
+      :name   => "music",
+      :ips    => ['10.252.0.22', "192.168.50.22"],
+      :macs   => [],
+      :cpus   => 2,
+      :cpu    => "50",
+      :ram    => 4 * 1024,
+      :groups => ["individual"],
+      :args   => ["music"],
   },
   {
     :name   => "oom",
