Add IP addr of docker proxy in TLAB
Change-Id: Ie94cc717afe4d850e7bb16aaca1da9e1175bf95c
Issue-ID: INT-414
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/tlab/ETE-HEAT-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-HEAT-Test.env
@@ -10,8 +10,8 @@ parameters:
   ubuntu_1604_image: "Ubuntu 16.04 LTS Generic"
   centos_7_image: "centos7"
 
-  apt_proxy: ""
-  docker_proxy: nexus3.onap.org:10001
+  apt_proxy: 192.168.31.204:3142
+  docker_proxy: 192.168.31.204:5000
 
   rancher_vm_flavor: m1.small
   k8s_vm_flavor: m2.xxlarge
