--- a/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
@@ -10,8 +10,8 @@ parameters:
   ubuntu_1604_image: "Ubuntu 16.04 LTS Generic"
   centos_7_image: "centos7"
 
-  apt_proxy: ""
-  docker_proxy: nexus3.onap.org:10001
+  apt_proxy: 192.168.31.204:3142
+  docker_proxy: 192.168.31.204:5000
 
   rancher_vm_flavor: m1.small
   k8s_vm_flavor: m2.xxlarge
