--- a/test/ete/labs/tlab/onap-openstack-template.env
+++ b/test/ete/labs/tlab/onap-openstack-template.env
@@ -32,7 +32,7 @@ parameters:
 
   nexus_repo: https://nexus.onap.org/content/sites/raw
 
-  nexus_docker_repo: nexus3.onap.org:10001
+  nexus_docker_repo: 192.168.31.204:5000
 
   nexus_username: anonymous
 
