--- a/test/csit/tests/clamp/UIs/data/TCA_template_properties.yml
+++ b/test/csit/tests/clamp/UIs/data/TCA_template_properties.yml
@@ -1,51 +1,82 @@
-tosca_definitions_version: cloudify_dsl_1_2
-
+tosca_definitions_version: cloudify_dsl_1_3
 imports:
-- http://www.getcloudify.org/spec/cloudify/3.3.1/types.yaml
-- http://127.0.0.1/1607_prod/type_files/cdap_app.yaml
-
+- http://www.getcloudify.org/spec/cloudify/3.4/types.yaml
+- https://onap.org:8443/repository/solutioning01-mte2-raw/type_files/docker/2.2.0/node-type.yaml
+- https://onap.org:8443/repository/solutioning01-mte2-raw/type_files/relationship/1.0.0/node-type.yaml
+- http://onap.org:8081/repository/solutioning01-mte2-raw/type_files/dmaap/dmaap_mr.yaml
+inputs:
+  location_id:
+    type: string
+  service_id:
+    type: string
 node_templates:
-  MTCA:
-    type: dcae.nodes.cdap_app
+  cdap_host_host:
+    type: dcae.nodes.StreamingAnalytics.SelectedCDAPInfrastructure
     properties:
-      service_name: "cdap-mtca-central"
-      deployment_JSON: |-
-          {
-            "clusterService": {"$ref": "/services/vm-cdap-cluster-central/instances/rdm2c"},
-            "namespace": "MTCA",
-            "appNames": [ "cdap-mtca" ],
-            "flowNames": [ "cdap-mtca.TCAVESCollectorFlow" ],
-            "workerNames": ["cdap-mtca.TCADMaaPMRSubscriberWorker", "cdap-mtca.TCADMaaPMRPublisherWorker"],
-            "serviceNames" : [],
-            "apps": {
-              "cdap-mtca": {
-                "jarFile": "/opt/app/cdap-apps/dcae-analytics-mtca-1.0.0.jar",
-                "artifactName": "dcae-analytics-mtca",
-                "version": "1.0.0",
-                "appConfigFileContent": "{config:{ \"appName\":\"cdap-mtca\", \"appDescription\":\"DCAE Analytics Threshold Crossing Alert Application\", \"tcaSubscriberOutputStreamName\":\"TCASubscriberOutputStream\", \"thresholdCalculatorFlowletInstances\":2, \"tcaVESMessageStatusTableName\":\"TCAVESMessageStatusTable\", \"tcaVESMessageStatusTableTTLSeconds\":864000, \"tcaVESAlertsTableName\":\"TCAVESAlertsTable\", \"tcaVESAlertsTableTTLSeconds\":1728000 }}"
-              }
-            },
-
-            "configuration": {
-                "$class": "com.att.ecomp.dcae.clamp.common.MThresholdCrossingConfiguration",
-                "subscriberContentType": "",
-                "subscriberConsumerId": "c12",
-                "subscriberConsumerGroup": "OpenDCAE-c12",
-                "subscriberTimeoutMS": "-1",
-                "subscriberMessageLimit": "-1",
-                "subscriberPollingInterval": "20000",
-                "publisherContentType": "application/json",
-                "publisherMaxBatchSize": "10",
-                "publisherMaxRecoveryQueueSize": "100000",
-                "publisherPollingInterval": "20000",
-                "publisherAlertWindowingTime": "86400",
-                "policyName": "policy.dcae.configuration",
-                "policyScope": "pnf=eNodeB;type=configuration",
-                "policyVersion": "1.0.0",
-                "domain" : "measurementsForVfScaling",
-
-                "signatures" : {
-             	 }
-
-             }
-          }
+      location_id:
+        get_input: location_id
+      scn_override: cdap_broker.solutioning-central.dcae.onap.org
+    interfaces:
+      cloudify.interfaces.lifecycle: {
+        }
+  tca_tca:
+    type: dcae.nodes.MicroService.cdap
+    properties:
+      app_config:
+        appDescription: DCAE Analytics Threshold Crossing Alert Application
+        appName: dcae-tca
+        tcaSubscriberOutputStreamName: TCASubscriberOutputStream
+        tcaVESAlertsTableName: TCAVESAlertsTable
+        tcaVESAlertsTableTTLSeconds: '1728000'
+        tcaVESMessageStatusTableName: TCAVESMessageStatusTable
+        tcaVESMessageStatusTableTTLSeconds: '86400'
+        thresholdCalculatorFlowletInstances: '2'
+      app_preferences:
+        publisherContentType: application/json
+        publisherHostName: mrlocal-mtnjftle01.onap.org
+        publisherHostPort: '3905'
+        publisherMaxBatchSize: '10'
+        publisherMaxRecoveryQueueSize: '100000'
+        publisherPollingInterval: '20000'
+        publisherProtocol: https
+        publisherTopicName: org.onap.dcae.dmaap.mtnje2.DcaeTestVESPub
+        publisherUserName: m00502@tca.af.dcae.onap.org
+        publisherUserPassword: Te5021abc
+        subscriberConsumerGroup: OpenDCAE-c12
+        subscriberConsumerId: c12
+        subscriberContentType: application/json
+        subscriberHostName: mrlocal-mtnjftle01.onap.org
+        subscriberHostPort: '3905'
+        subscriberMessageLimit: '-1'
+        subscriberPollingInterval: '20000'
+        subscriberProtocol: https
+        subscriberTimeoutMS: '-1'
+        subscriberTopicName: org.onap.dcae.dmaap.mtnje2.DcaeTestVESSub
+        subscriberUserName: m00502@tca.af.dcae.onap.org
+        subscriberUserPassword: Te5021abc
+        tca_policy: null
+      artifact_name: dcae-analytics-tca
+      artifact_version: 1.0.0
+      connections:
+        streams_publishes: [
+          ]
+        streams_subscribes: [
+          ]
+      jar_url: http://somejar
+      location_id:
+        get_input: location_id
+      namespace: cdap_tca_hi_lo
+      programs:
+      - program_id: TCAVESCollectorFlow
+        program_type: flows
+      - program_id: TCADMaaPMRSubscriberWorker
+        program_type: workers
+      - program_id: TCADMaaPMRPublisherWorker
+        program_type: workers
+      service_component_type: cdap_app_tca
+      service_id:
+        get_input: service_id
+      streamname: TCASubscriberOutputStream
+    relationships:
+    - target: cdap_host_host
+      type: dcae.relationships.component_contained_in
