Update default vagrant provider.
Default vagrant provider was showing error for ubuntu/trusty64 or
ubuntu/xenial64 not found. This patch updates the default to
https://vagrantcloud.com which have recently been changed.

Change-Id: I069eae9370ecdf1483098528cee57d9b3e81a41b
Signed-off-by: Manjeet Singh Bhatia<manjeet.s.bhatia@intel.com>
Issue-ID: INT-434

--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -1,6 +1,8 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+Vagrant::DEFAULT_SERVER_URL.replace('https://vagrantcloud.com')
+
 configuration = {
   # Generic parameters used across all ONAP components
   'key_name'            => 'ecomp_key',
