Move src_folder
The SDC simultator mentions[1] the usage of ChefDK as part of tools
for installation/development. The installation process uses the /opt/
folder as destionation and it's affected by the sharing process. This
patchset changes the destionation folder for all the ONAP projects.

[1] https://git.onap.org/sdc/tree/utils/webseal-simulator/sdc-simulator/chef-solo/README.md#n4

Change-Id: Ib800c48864ce2cbe49e699a6d6e913be137af949
Signed-off-by: Victor Morales <victor.morales@intel.com>
Issue-ID: INT-214

--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -493,7 +493,7 @@ Vagrant.configure("2") do |config|
 
         # Set Sync Folder
         nodeconfig.vm.synced_folder ".", "/vagrant", disabled: true
-        nodeconfig.vm.synced_folder './opt', '/opt/', create: true, type: sync_type
+        nodeconfig.vm.synced_folder './opt', '/opt/onap/', create: true, type: sync_type
         nodeconfig.vm.synced_folder './lib', '/var/onap/', create: true, type: sync_type
         if !is_windows
           nodeconfig.vm.synced_folder '~/.m2', '/root/.m2/', create: true
