correction to pass 1 failed CSIT test
Issue-ID: MUSIC-52

Change-Id: I789055f770d73a2d2d3c551e6457f57a659231a7
Signed-off-by: Leonardo Bellini <leonardo.bellini@att.com>

--- a/test/csit/scripts/music/music-properties/music.properties
+++ b/test/csit/scripts/music/music-properties/music.properties
@@ -5,8 +5,8 @@ all.ids=0
 #######################################
 # Optional current values are defaults
 #######################################
-#zookeeper.host=localhost
-#cassandra.host=localhost
+zookeeper.host=music-zk
+cassandra.host=music-db
 #music.ip=localhost
 #debug=true
 #music.rest.ip=localhost
