--- a/deployment/heat/onap-oom/onap-oom.yaml
+++ b/deployment/heat/onap-oom/onap-oom.yaml
@@ -238,6 +238,7 @@ resources:
             __public_net_id__: { get_param: public_net_id }
             __public_net_name__: { get_param: public_net_name }
             __oam_network_id__: { get_resource: oam_network }
+            __oam_subnet_id__: { get_resource: oam_subnet }
             __oam_network_cidr__: { get_param: oam_network_cidr }
             __ubuntu_1404_image__: { get_param: ubuntu_1404_image }
             __ubuntu_1604_image__: { get_param: ubuntu_1604_image }
