--- a/test/csit/plans/aai/resources/docker-compose.yml
+++ b/test/csit/plans/aai/resources/docker-compose.yml
@@ -4,13 +4,19 @@ services:
     image: ${DOCKER_REGISTRY}/onap/aai-resources
     hostname: aai-resources.api.simpledemo.onap.org
     environment:
-      - AAI_CHEF_ENV=simpledemo
-      - AAI_CHEF_LOC=/var/chef/aai-data/environments
-      - CHEF_BRANCH=master
-      - CHEF_GIT_URL=http://gerrit.onap.org/r/aai
       - LOCAL_USER_ID=${USER_ID}
+      - LOCAL_GROUP_ID=${GROUP_ID}
     ports:
       - 8447:8447
+    volumes:
+      - ${CURRENT_PWD}/appconfig/titan-realtime.properties:/opt/app/aai-resources/resources/etc/appprops/titan-realtime.properties
+      - ${CURRENT_PWD}/appconfig/titan-cached.properties:/opt/app/aai-resources/resources/etc/appprops/titan-cached.properties
+      - ${CURRENT_PWD}/appconfig/aaiconfig.properties:/opt/app/aai-resources/resources/etc/appprops/aaiconfig.properties
+      - ${CURRENT_PWD}/appconfig/application.properties:/opt/app/aai-resources/resources/application.properties
+      - ${CURRENT_PWD}/appconfig/logback.xml:/opt/app/aai-resources/resources/logback.xml
+      - ${CURRENT_PWD}/appconfig/localhost-access-logback.xml:/opt/app/aai-resources/resources/localhost-access-logback.xml
+      - ${CURRENT_PWD}/appconfig/aai_keystore:/opt/app/aai-resources/resources/etc/auth/aai_keystore
+      - ${CURRENT_PWD}/appconfig/realm.properties:/opt/app/aai-resources/resources/etc/auth/realm.properties
     logging:
       driver: "json-file"
       options:
@@ -20,12 +26,18 @@ services:
     image: ${DOCKER_REGISTRY}/onap/aai-traversal
     hostname: aai-traversal.api.simpledemo.onap.org
     environment:
-      - AAI_CHEF_ENV=simpledemo
-      - AAI_CHEF_LOC=/var/chef/aai-data/environments
-      - CHEF_BRANCH=master
-      - CHEF_GIT_URL=http://gerrit.onap.org/r/aai
       - LOCAL_USER_ID=${USER_ID}
+      - LOCAL_GROUP_ID=${GROUP_ID}
       - DISABLE_UPDATE_QUERY=true
+    volumes:
+      - ${CURRENT_PWD}/appconfig/titan-realtime.properties:/opt/app/aai-traversal/resources/etc/appprops/titan-realtime.properties
+      - ${CURRENT_PWD}/appconfig/titan-cached.properties:/opt/app/aai-traversal/resources/etc/appprops/titan-cached.properties
+      - ${CURRENT_PWD}/appconfig/aaiconfig.properties:/opt/app/aai-traversal/resources/etc/appprops/aaiconfig.properties
+      - ${CURRENT_PWD}/appconfig/application.properties:/opt/app/aai-traversal/resources/application.properties
+      - ${CURRENT_PWD}/appconfig/logback.xml:/opt/app/aai-traversal/resources/logback.xml
+      - ${CURRENT_PWD}/appconfig/localhost-access-logback.xml:/opt/app/aai-traversal/resources/localhost-access-logback.xml
+      - ${CURRENT_PWD}/appconfig/aai_keystore:/opt/app/aai-traversal/resources/etc/auth/aai_keystore
+      - ${CURRENT_PWD}/appconfig/realm.properties:/opt/app/aai-traversal/resources/etc/auth/realm.properties
     ports:
       - 8446:8446
     logging:
