--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,1 @@
-*.java text eol=lf
-*.xml text eol=lf
-*.sh text eol=lf
-*.csv text eol=lf
-*.yaml text eol=lf
-*.json text eol=lf
+* text=auto eol=lf
