--- a/test/csit/plans/aai/resources/docker-compose.yml
+++ b/test/csit/plans/aai/resources/docker-compose.yml
@@ -6,11 +6,12 @@ services:
     environment:
       - LOCAL_USER_ID=${USER_ID}
       - LOCAL_GROUP_ID=${GROUP_ID}
+      - SKIP_CREATE_DB_SCHEMA_AT_STARTUP=true
     ports:
       - 8447:8447
     volumes:
-      - ${CURRENT_PWD}/aai-resources/appconfig/titan-realtime.properties:/opt/app/aai-resources/resources/etc/appprops/titan-realtime.properties
-      - ${CURRENT_PWD}/aai-resources/appconfig/titan-cached.properties:/opt/app/aai-resources/resources/etc/appprops/titan-cached.properties
+      - ${CURRENT_PWD}/aai-resources/appconfig/janusgraph-realtime.properties:/opt/app/aai-resources/resources/etc/appprops/janusgraph-realtime.properties
+      - ${CURRENT_PWD}/aai-resources/appconfig/janusgraph-cached.properties:/opt/app/aai-resources/resources/etc/appprops/janusgraph-cached.properties
       - ${CURRENT_PWD}/aai-resources/appconfig/aaiconfig.properties:/opt/app/aai-resources/resources/etc/appprops/aaiconfig.properties
       - ${CURRENT_PWD}/aai-resources/appconfig/application.properties:/opt/app/aai-resources/resources/application.properties
       - ${CURRENT_PWD}/aai-resources/appconfig/logback.xml:/opt/app/aai-resources/resources/logback.xml
@@ -30,8 +31,8 @@ services:
       - LOCAL_GROUP_ID=${GROUP_ID}
       - DISABLE_UPDATE_QUERY=true
     volumes:
-      - ${CURRENT_PWD}/aai-traversal/appconfig/titan-realtime.properties:/opt/app/aai-traversal/resources/etc/appprops/titan-realtime.properties
-      - ${CURRENT_PWD}/aai-traversal/appconfig/titan-cached.properties:/opt/app/aai-traversal/resources/etc/appprops/titan-cached.properties
+      - ${CURRENT_PWD}/aai-traversal/appconfig/janusgraph-realtime.properties:/opt/app/aai-traversal/resources/etc/appprops/janusgraph-realtime.properties
+      - ${CURRENT_PWD}/aai-traversal/appconfig/janusgraph-cached.properties:/opt/app/aai-traversal/resources/etc/appprops/janusgraph-cached.properties
       - ${CURRENT_PWD}/aai-traversal/appconfig/aaiconfig.properties:/opt/app/aai-traversal/resources/etc/appprops/aaiconfig.properties
       - ${CURRENT_PWD}/aai-traversal/appconfig/application.properties:/opt/app/aai-traversal/resources/application.properties
       - ${CURRENT_PWD}/aai-traversal/appconfig/logback.xml:/opt/app/aai-traversal/resources/logback.xml
@@ -61,16 +62,18 @@ services:
         max-size: "30m"
         max-file: "5"
   aai.hbase.simpledemo.onap.org:
-    image: ${HBASE_IMAGE}:${HBASE_VERSION}
+    image: cassandra:2.1
     hostname: aai.hbase.simpledemo.onap.org
     ports:
-      - 2181:2181
-      - 8080:8080
-      - 8085:8085
-      - 9090:9090
-      - 16000:16000
-      - 16010:16010
-      - 16201:16201
+      - 7000:7000
+      - 7001:7001
+      - 7199:7199
+      - 9042:9042
+    environment:
+      - CASSANDRA_SEEDS=aai.hbase.simpledemo.onap.org
+      - CASSANDRA_DC=Heat
+      - CASSANDRA_RACK=Rack1
+      - CASSANDRA_AUTO_BOOTSTRAP=true
     logging:
       driver: "json-file"
       options:
