Update from titan to janus graph
Issue-ID: AAI-949
Change-Id: I4d4ef8222843c1b37e95a2fe37b3c14f35782d0f
Signed-off-by: Kajur, Harish (vk250x) <vk250x@att.com>

--- a/test/csit/plans/aai/resources/aai-resources/appconfig/janusgraph-cached.properties
+++ b/test/csit/plans/aai/resources/aai-resources/appconfig/janusgraph-cached.properties
@@ -21,9 +21,13 @@
 #
 
 query.fast-property=true
+query.smart-limit=false
+
 # the following parameters are not reloaded automatically and require a manual bounce
-storage.backend=hbase
+storage.backend=cassandra
 storage.hostname=aai.hbase.simpledemo.onap.org
+
+storage.cassandra.keyspace=aaigraph
 
 #schema.default=none
 storage.lock.wait-time=300
