--- a/test/csit/plans/aai/traversal/aai-traversal/appconfig/janusgraph-cached.properties
+++ b/test/csit/plans/aai/traversal/aai-traversal/appconfig/janusgraph-cached.properties
@@ -21,9 +21,13 @@
 #
 
 query.fast-property=true
+query.smart-limit=false
+
 # the following parameters are not reloaded automatically and require a manual bounce
-storage.backend=hbase
+storage.backend=cassandra
 storage.hostname=aai.hbase.simpledemo.onap.org
+
+storage.cassandra.keyspace=aaigraph
 
 #schema.default=none
 storage.lock.wait-time=300
