Add dcae_deployment_profile for lab heat env
Change-Id: I6338ba083a5295a68ad5a263b2d02af1235e7bba
Issue-ID: DCAEGEN2-206
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/test/ete/labs/tlab/onap-openstack-template.env
+++ b/test/ete/labs/tlab/onap-openstack-template.env
@@ -100,6 +100,7 @@ parameters:
   #                         #
   ###########################
 
+  dcae_deployment_profile: R2MVP
   dnsaas_config_enabled: false
   dnsaas_region: RegionOne
   dnsaas_keystone_url: https://bdc1tlab01.research.att.com:5000/v3
