--- a/test/ete/labs/windriver/onap-openstack-template.env
+++ b/test/ete/labs/windriver/onap-openstack-template.env
@@ -100,6 +100,7 @@ parameters:
   #                         #
   ###########################
 
+  dcae_deployment_profile: R2MVP
   dnsaas_config_enabled: true
   dnsaas_region: RegionOne
   dnsaas_keystone_url: http://10.12.25.5:5000/v3
