Increase rancher VM size
Change-Id: I1d9c9a7dd13ba569a04b35fd8baad42576b5b8af
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/gwu/onap.env
+++ b/deployment/heat/onap-oom/env/gwu/onap.env
@@ -13,7 +13,7 @@ parameters:
   apt_proxy: 192.168.1.51:3142
   docker_proxy: 192.168.1.51:5000
 
-  rancher_vm_flavor: m1.small
+  rancher_vm_flavor: m1.large
   k8s_vm_flavor: m2.xxlarge
 
   public_net_id: 024582bd-ef9b-48b9-9e70-e6732559d9df
