--- a/deployment/heat/onap-oom/env/huawei/onap-beijing-oom.env
+++ b/deployment/heat/onap-oom/env/huawei/onap-beijing-oom.env
@@ -13,7 +13,7 @@ parameters:
   apt_proxy: 10.145.122.118:3142
   docker_proxy: 10.145.122.118:5000
 
-  rancher_vm_flavor: m1.small
+  rancher_vm_flavor: m1.large
   k8s_vm_flavor: m2.xxlarge
 
   public_net_id: 3a6247f1-fac6-4167-a49f-33cc8415ccf4
