--- a/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
@@ -13,7 +13,7 @@ parameters:
   apt_proxy: 192.168.31.204:3142
   docker_proxy: 192.168.31.204:5000
 
-  rancher_vm_flavor: m1.small
+  rancher_vm_flavor: m1.large
   k8s_vm_flavor: m2.xxlarge
 
   public_net_id: fbe8fd92-6636-4e63-ab28-bb6a5b0888a9
