--- a/deployment/heat/onap-oom/env/windriver/Integration-SB-06.env
+++ b/deployment/heat/onap-oom/env/windriver/Integration-SB-06.env
@@ -13,7 +13,7 @@ parameters:
   apt_proxy: 10.12.5.2:3142
   docker_proxy: 10.12.5.2:5000
 
-  rancher_vm_flavor: m1.small
+  rancher_vm_flavor: m1.large
   k8s_vm_flavor: m1.xxlarge
 
   public_net_id: 971040b2-7059-49dc-b220-4fab50cb2ad4
