--- a/deployment/heat/onap-oom/onap-oom.yaml
+++ b/deployment/heat/onap-oom/onap-oom.yaml
@@ -2,6 +2,9 @@ heat_template_version: 2015-10-15
 description: ONAP on Kubernetes using OOM
 
 parameters:
+  lab_name:
+    type: string
+
   docker_proxy:
     type: string
 
@@ -227,6 +230,7 @@ resources:
       user_data:
         str_replace:
           params:
+            __lab_name__: { get_param: lab_name }
             __docker_proxy__: { get_param: docker_proxy }
             __apt_proxy__: { get_param: apt_proxy }
             __rancher_ip_addr__: { get_attr: [rancher_floating_ip, floating_ip_address] }
