--- a/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
+++ b/deployment/heat/onap-oom/env/tlab/ETE-OOM-Test.env
@@ -10,6 +10,7 @@ parameters:
   ubuntu_1604_image: "Ubuntu 16.04 LTS Generic"
   centos_7_image: "centos7"
 
+  lab_name: tlab
   apt_proxy: 192.168.31.204:3142
   docker_proxy: 192.168.31.204:5000
 
