--- a/deployment/heat/onap-oom/env/windriver/Integration-SB-04.env
+++ b/deployment/heat/onap-oom/env/windriver/Integration-SB-04.env
@@ -10,6 +10,7 @@ parameters:
   ubuntu_1604_image: ubuntu-16-04-cloud-amd64
   centos_7_image: CentOS-7
 
+  lab_name: windriver
   apt_proxy: 10.12.5.2:3142
   docker_proxy: 10.12.5.2:5000
 
