Put APPC and DCAE back
Change-Id: I50f5a40896011c84074a354bfd978ac396728b48
Issue-ID: INT-479
Signed-off-by: helenc878 <helen.chen@huawei.com>

--- a/deployment/heat/onap-oom/env/windriver/integration-override-minimal.yaml
+++ b/deployment/heat/onap-oom/env/windriver/integration-override-minimal.yaml
@@ -68,7 +68,7 @@ aai:
   aai-traveral:
     image: onap/aai-traversal:1.2-STAGING-latest
 appc:
-  enabled: false
+  enabled: false 
 clamp:
   enabled: true
 cli:
@@ -76,7 +76,7 @@ cli:
 consul:
   enabled: true
 dcaegen2:
-  enabled: false
+  enabled: true 
 esr:
   enabled: false
   # esr parent chart (server) image override
