Add Robot config to integration-override.yaml
Change-Id: I7708da0cf6886a499c1fdb554542c9242119ae5d
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/windriver/integration-override.yaml
+++ b/deployment/heat/onap-oom/env/windriver/integration-override.yaml
@@ -106,11 +106,14 @@ robot:
   #pullPolicy: Always
 #  config:
     # openstack configuration
-#    openStackUserName: "demo"
-#    openStackRegion: "RegionOne"
-#    openStackKeyStoneUrl: "http://10.12.25.2:5000"
-#    openStackServiceTenantName: "service"
-#    openStackEncryptedPasswordHere: "c124921a3a0efbe579782cde8227681e"
+  openStackUserName: "demo"
+  openStackRegion: "RegionOne"
+  openStackKeyStoneUrl: "http://10.12.25.2:5000"
+  openStackServiceTenantName: "service"
+  #openStackEncryptedPasswordHere: "c124921a3a0efbe579782cde8227681e"
+  openStackPassword: "onapdemo"
+  openStackPublicNetId: "971040b2-7059-49dc-b220-4fab50cb2ad4"
+  openStackTenantId: "d570c718cbc545029f40e50b75eb13df"
 sdc:
   enabled: true
 sdnc:
