Added appc back and still use 64 GB for 00
Change-Id: I397b6cf72c468dac5659b3ec9bf5524e01b621ce
Issue-ID: INT-479
Signed-off-by: helenc878 <helen.chen@huawei.com>

--- a/deployment/heat/onap-oom/env/default/integration-override.yaml
+++ b/deployment/heat/onap-oom/env/default/integration-override.yaml
@@ -68,7 +68,7 @@ aai:
   aai-traveral:
     image: onap/aai-traversal:1.2-STAGING-latest
 appc:
-  enabled: false
+  enabled: true 
 clamp:
   enabled: true
 cli:
